frontend/err2.txt
C:\Users\ASUS\Documents\workspace\EXPERIMENTOS\saas experimental con ecosistema v5.0\frontend\temp.js:469
                        } else if (Categoriarios Profesionales') {
                                                 ^^^^^^^^^^^^^

SyntaxError: Unexpected identifier 'Profesionales'
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v22.17.1
